--- a/app/src/main/res/layout/activity_view_mode.xml
+++ b/app/src/main/res/layout/activity_view_mode.xml
@@ -14,8 +14,9 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="48dp"
         android:text="View Mode"
+        android:textColor="#0E0E0E"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold|italic" />
 
     <TextView
         android:id="@+id/textViewTitle"
