--- a/app/src/main/res/layout/activity_view_mode.xml
+++ b/app/src/main/res/layout/activity_view_mode.xml
@@ -13,9 +13,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="48dp"
+        android:fontFamily="@font/comic_neue_light"
         android:text="View Mode"
+        android:textAllCaps="true"
         android:textColor="#0E0E0E"
-        android:textSize="20sp"
+        android:textSize="34sp"
         android:textStyle="bold|italic" />
 
     <TextView
@@ -24,9 +26,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/comic_neue_light"
         android:text="Title"
+        android:textAllCaps="true"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold|italic" />
 
     <TextView
         android:id="@+id/textViewId"
@@ -44,8 +48,12 @@
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
 
+        android:fontFamily="@font/comic_neue_light"
         android:lineSpacingExtra="16sp"
+        android:padding="20dp"
         android:text="TextView"
-        android:textSize="20sp" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
