--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -38,15 +38,30 @@
             android:maxLength="50"
             android:textColor="#FF0000"
              />
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textViewPosition"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
         android:layout_weight="1"
-        android:text="TextView"
-        android:textSize="36sp" />
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TAG:"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textColor="@color/purple_500"
+            android:textStyle="bold|italic" />
+    </LinearLayout>
 
 </LinearLayout>
