--- a/app/src/main/res/layout/activity_view_mode.xml
+++ b/app/src/main/res/layout/activity_view_mode.xml
@@ -34,12 +34,12 @@
 
     <TextView
         android:id="@+id/textViewId"
-        android:layout_width="wrap_content"
+        android:layout_width="58dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="24dp"
-        android:text="id"
+        android:text="tag: ->"
         android:textStyle="bold" />
 
     <TextView
