--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -56,7 +56,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textViewTag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
