--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id= "@+id/item1"
-        android:title="Rosso" />
+        android:title="Giallo" />
     <item android:id= "@+id/item2"
-        android:title="Giallo"
+        android:title="Rosso"
         />
     <item android:id= "@+id/item3"
         android:title="Blue" />
