--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id= "@+id/item1"
-        android:title="Giallo" />
+        android:title="PRIMO" />
     <item android:id= "@+id/item2"
-        android:title="Rosso"
+        android:title="SECONDO"
         />
     <item android:id= "@+id/item3"
-        android:title="Blue" />
+        android:title="TERZO" />
 
 
 </menu>
