--- a/app/src/main/res/layout/activity_edit_note.xml
+++ b/app/src/main/res/layout/activity_edit_note.xml
@@ -16,9 +16,9 @@
         android:gravity="center"
         android:padding="12dp"
         android:text="Edit Note"
-        android:textAllCaps="false"
+        android:textAllCaps="true"
         android:textColor="#F60000"
-        android:textSize="24sp"
+        android:textSize="48sp"
         android:textStyle="bold|italic" />
 
     <TextView
@@ -29,12 +29,12 @@
 
     <EditText
         android:id="@+id/TitleNoteText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
         android:ems="10"
         android:hint="title note"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:text="TITOLO NOTA" />
 
     <TextView
         android:id="@+id/textView3"
